--- a/bài_tập_4.html
+++ b/bài_tập_4.html
@@ -229,7 +229,7 @@ tr, td { border: 0px solid;
 						<label for = "are you human">are you human?</label>
 					</td>
 					<td>
-						<img src = "C:\Users\ADMIN\OneDrive\Desktop\.html project\image\z7032496553789_a667c063abd8f2b6a82153d9e17e4109.jpg" width="200" height="70">
+						<img src="tidawo.jpg" width="200" height="70">
 						<p style="margin: 0%;">Click to change</p>
 						<input type = "text" id = "are you human" name = "are you human">
 					</td>
@@ -243,6 +243,10 @@ tr, td { border: 0px solid;
 						<input type = "submit" value="submit">
 						<input type="reset" value="Cancel">
 					</td>
+				</tr>
+			</form>
+		</table>
+</div>
 </body>
-
 </html>
+
